web/webapps/martapps/css/v1/data.css
/* ... */
.biomart .heat-id .key {
    display: block;
    color: #666;
    text-shadow: 1px 1px 1px #ddd;
    width: 100%;
}
.biomart .heat-id .value {
    display: block;
    margin-left: 2em;
}
.biomart .heat-box {
    border: 1px solid #000;
    width: 60px;
    height: 60px;
    position: relative;
    margin: 0 auto;
    text-align: left;
    -moz-box-shadow: 1px 1px 3px #aaa; -webkit-box-shadow: 1px 1px 3px #aaa; box-shadow: 1px 1px 3px #aaa;
}
.biomart .heat-box.none {
    cursor: default;
}
.biomart .heat-box.none {
    border: 1px dashed #999;
    background-color: #ccc;
}
.biomart .heat-box .value {
    display: none;
    position: absolute;
    top: 22px;
    width: 100%;
    color: #fff;
    text-align: center;
    font-size: 14px;
    font-weight: bold;
    text-shadow: 1px 1px 2px #000;
}
.biomart .tmamap {
	position: relative;
	height: 400px;
	/*width: 1000px;*/
}
.biomart .tmamap canvas{
	position: absolute;
	top:0;
	left:0;
	width: 100%;
	height: 100%;
}
.biomart .heat-legend-wrap {
    position: absolute;
    left: 5px;
    bottom: 15px;
}
.biomart .heat-legend {
    position: relative;
    height: 20px;
    width: 200px;
    border: 1px solid #000;
}
.biomart .heat-legend canvas {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
.biomart .heat-legend div {
    position: absolute;
    color: #555;
    font-size: 12px;
    margin: 4px 0;
    text-shadow: 1px 1px 1px #ccc;
    bottom: -1.7em;
}
.biomart .heat-legend .max {
     right: 4px;
}
.biomart .heat-legend .mid {
    right: 0;
    margin-right: 95px;
}
.biomart .heat-legend .min {
     left: 4px;
}
.biomart .heat-legend p {
    display: none;
}
.biomart .data.heatmap ul {
    float: left;
    width: 910px;
    margin-left: 5px;
}
.biomart .data.heatmap li {
    margin: 0;
    width: 895px;
    font-size: 14px;
    border-bottom: none;
    line-height: 1.5em;
}    
.biomart .data.heatmap li:last-child {
    border-bottom: 1px solid #ddd;
}
.biomart .data.heatmap li .value  {
    width: 710px;
}
.biomart .data.heatmap li .key  {
    width: 170px;
}
.biomart .data.heatmap td {
    vertical-align: top;
}
.biomart .data.heatmap thead td {
    white-space: nowrap;
}
.biomart .data.heatmap td.primary {
    text-align: center;
}
.biomart .data.heatmap .fallback {
    border-bottom: 1px dashed #777;
    color: #777;
    cursor: help;
}
.biomart .legend table {
    border: 1px solid #999;
    -webkit-box-shadow: 1px 1px 3px #999;
    -moz-box-shadow: 1px 1px 3px #999; 
    box-shadow: 1px 1px 3px #999; 
    width: auto !important;
}
.biomart .legend table td {
    font-size: 12px;
    border-bottom: none !important;
    background-color: transparent !important;
}

/* Results */
#biomart-results span.loading {
    position: absolute;
    top: 7px;
    left: 50%;
    margin-left: -21px;
    z-index: 100;
}
#biomart-results h3 {
    text-align: left;
}
#biomart-results h3 span {
    font-size: 18px !important;
}
#biomart-results p.info {
    line-height: 1em;
    min-height: 3.1em;
    font-size: 12px;
    color: #333;
    margin: .5em 0;
}
#biomart-results p.info span.fyi {
    font-size: 12px;
    color: #777;
}
#biomart-results p.paginator {
    float: left;
    font-size: 14px;
    color: #333;
    margin-top: 16px;
}
#biomart-results p.paginator a:hover {
    color: #3b6bef;
}
#biomart-results p.info em {
    color: #666;
}
#biomart-results .data {
    clear: both;
    overflow-x: auto;
    font-size: 14px;
    margin-top: 5px;
    text-align: left;
}
#biomart-results .chart,
#biomart-results .histogram,
#biomart-results .scatterplot,
#biomart-results .boxplot,
#biomart-results .dotplot,
#biomart-results .barchart,
#biomart-results .plot,
#biomart-results .tmamap {
    overflow: visible;
}
#biomart-results .actions {
    margin: 10px 0 5px;
    float: right;
}
#biomart-results .actions a {
    font-size: 12px;
    margin-left: 10px;
    border-right: 1px dotted #999;
    float: left;
    margin-top: 10px;
    line-height: 15px;
    padding-right: 10px;
}    
#biomart-results .actions .ui-icon {
    float:left;
}
#biomart-results .actions a.awesome {
    text-align: center;
    border-right: none;
    margin-top: 0;
    color: #fff;
}
#biomart-results a.awesome .wrapper {
    line-height: 16px;
}
#biomart-view-xml,
#biomart-view-sparql,
#biomart-view-java {
    padding: 0;
    overflow: hidden;
}
#biomart-view-xml textarea,
#biomart-view-java textarea,
#biomart-view-sparql textarea {
    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
    font-size: 11px;
    margin: 0;
    border: 0;
    width: 100%;
    height: 100%;
    resize: none;
}
#biomart-top-wrapper.wide h3 {
    background-color: transparent;
    color: #897048;
    font-size: 16px;
    font-weight: normal;
    padding: 0;
    text-align: left !important;
    text-shadow: 0 0 2px #FFFFFF;
    font-variant: normal;
}
#biomart-view-bookmark {
    overflow: hidden;
}
#biomart-view-bookmark input {
    width: 475px;
}
#biomart-error h2 {
    border-bottom: none !important;
    padding: 0;
    font-size: 2.2em;
}

.ui-dialog span.loading {
    position: absolute;
}

